--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"@lucide/svelte": "^0.509.0",
 		"@polkadot/api": "^15.9.3",
 		"@polkadot/extension-dapp": "^0.58.9",
-		"@supabase/supabase-js": "^2.49.4"
+		"@supabase/supabase-js": "^2.49.4",
+		"@vercel/analytics": "^1.5.0"
 	}
 }
